static/base.css
/* theme: https://kuler.adobe.com/sevdevhu-theme-based-on-AlMo3000-color-theme-3699265/ */

@import url(//fonts.googleapis.com/css?family=Orbitron:500,700|Audiowide);

nav, article, header
{
  display: block;
}

*
{
  margin: 0px;
  padding: 0px;
}

*:link
{
  text-decoration: none;
  border: 0px;
}

body
{
  background: #F0EEEC;
  min-width: 960px;
  overflow-x: hidden;
}

#background_header
{
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 250px;
  background-color: #F0EEEC;
  z-index: -2;
}

#background_menu
{
  position: absolute;
  top: 250px;
  left: 0px;
  width: 100%;
  height: 35px;
  z-index: -1;
}

#background_menu_line
{
  position: absolute;
  top: 150px;
  width: 100%;
  height: 5px;
  background: #cccccc;
}

#align
{
  width: 960px;
  margin: auto;
  position: relative;
  padding-top: 140px;
}

header {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	height: 120px;
}

#logo {
	height: 60px;
	position: absolute;
	left: 20px;
	top: 43px;
}

#menu
{
  position: absolute;
  left: 0px; /* js manipulated */
  top: 120px;
  height: 35px;
  width: 100%;
  z-index: 2;
}

#menu a
{
  display: inline-block;
  line-height: 30px;
  height: 30px;
  width: 140px;
  color: #50647d;
  font-family: Orbitron, Arial;
  font-size: 16px;
  padding: 0px 20px;
  margin: 0;
  z-index: 1;
  position: relative;
  text-align: center;

  -webkit-transition: color 0.3s linear;
  -moz-transition: color 0.3s linear;
  -ms-transition: color 0.3s linear;
  -o-transition: color 0.3s linear;
  transition: color 0.3s linear;
}

#menu_slider
{
  position: relative;
  font-size: 0;
  -webkit-transition: left 0.3s;
  -moz-transition: left 0.3s;
  -ms-transition: left 0.3s;
  -o-transition: left 0.3s;
  transition: left 0.3s;
}

#menu.focus-1 > #menu_slider { left: 390px }
#menu.focus-2 > #menu_slider { left: 210px }
#menu.focus-3 > #menu_slider { left: 30px }
#menu.focus-4 > #menu_slider { left: -150px }
#menu.focus-5 > #menu_slider { left: -330px }

#menu a:hover,
#menu a.active
{
  color: #718db0;

}

#menu_selector
{
  position: absolute;
  bottom: 0px;
  left: 390px;
  right: 390px;
  height: 5px;
  background-color: #ff9900;
  z-index: 0;
}

#content
{
  text-align: center;
  position: relative;
  white-space: nowrap;
  -webkit-transition: height 0.3s linear;
}

#overlay_left,
#overlay_right
{
  position: absolute;
  z-index: 1;
  width: 10000px;
  height: 100%;
  top: 2px;
}

#overlay_left
{
  right: 100%;
}

#overlay_right
{
  left: 100%;
}

#content.focus-1 .dummy { margin-left: 0% }
#content.focus-2 .dummy { margin-left: -100% }
#content.focus-3 .dummy { margin-left: -200% }
#content.focus-4 .dummy { margin-left: -300% }
#content.focus-5 .dummy { margin-left: -400% }

#content > .page
{
  display: inline-block;
  width: 100%;
  min-height: 400px;
  vertical-align: top;

  -webkit-transition-property: margin-left, opacity, height;
  -webkit-transition-duration: 0.3s;
  -moz-transition-property: margin-left, opacity, height;
  -moz-transition-duration: 0.3s;
  -ms-transition-property: margin-left, opacity, height;
  -ms-transition-duration: 0.3s;
  -o-transition-property: margin-left, opacity, height;
  -ot-transition-duration: 0.3s;
  transition-property: margin-left, opacity, height;
  transition-duration: 0.3s;
}

#content > .dummy
{
  width: 0;
}

#content > .page.inactive
{
  opacity: 0.2;
}

article
{
  padding: 30px 20px 10px 20px;
  text-align: justify;
  font-family: sans-serif;
  color: #333333;
  font-size: 18px;
  white-space: normal;
  position: relative;
}

#content > .page.inactive > article > h1
{
  opacity: 0;
}

article > h1
{
	text-transform: lowercase;
	position: absolute;
	font-size: 59px;
	top: -94px;
	right: 20px;
	font-weight: normal;
	font-family: Orbitron, Verdana, sans-serif;
	color: #50647d;
	opacity: 0.4;
	-webkit-transition: opacity 0.3s;
}

article h2 {
	font-family: Ubuntu, sans-serif;
	font-size: 28px;
	color: #ff9900;
	font-weight: bold;
	margin: 20px 0 20px 0; 
}

article section:first-of-type h2 {
	margin-top: 0;
}

article p
{
  margin-bottom: 8px;
}

article a
{
  font-weight: bold;
  color: #50647d;
  -webkit-transition: color 0.3s;
}

article :link:hover,
article :link:active
{
	color: #718DB0;
}

article a[href^=http]:after
{
  content: "\2197";
  margin-left: -2px;
  color: #888;
  text-shadow: none;
  font-size: 80%;
  vertical-align: super;
  font-weight: normal;
}

